manifests/np-002-2-only-egress-is-blocked.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ccss_score: "7.5"
    ccss_severity: High
    check_path: NetworkPolicy.spec.policyTypes[]|.spec.policyTypes[]
    expected: alert
    standards: "[{'standard': 'CIS Kubernetes Benchmark', 'version': '1.12', 'controls': ['5.3.1']}, {'standard': 'NSA-CISA Kubernetes Hardening Guide', 'controls': ['Network policies']}, {'standard': 'BSI APP.4.4 Kubernetes', 'controls': ['APP.4.4.A7']}, {'standard': 'PCI Guidance for Containers and Container Orchestration Tools', 'controls': ['4.1.a']}, {'standard': 'Microsoft Threat Matrix for Kubernetes', 'controls': ['MS-M9014']}, {'standard': 'Kubernetes Security Checklist', 'controls': [' [...]
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
    check: NP-002-2
    pod-security.kubernetes.io/enforce: restricted
  name: np-002-2-only-egress-is-blocked
  namespace: np-002-2-only-egress-is-blocked
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    ccss_score: "7.5"
    ccss_severity: High
    check_path: NetworkPolicy.spec.policyTypes[]|.spec.policyTypes[]
    expected: alert
    standards: "[{'standard': 'CIS Kubernetes Benchmark', 'version': '1.12', 'controls': ['5.3.1']}, {'standard': 'NSA-CISA Kubernetes Hardening Guide', 'controls': ['Network policies']}, {'standard': 'BSI APP.4.4 Kubernetes', 'controls': ['APP.4.4.A7']}, {'standard': 'PCI Guidance for Containers and Container Orchestration Tools', 'controls': ['4.1.a']}, {'standard': 'Microsoft Threat Matrix for Kubernetes', 'controls': ['MS-M9014']}, {'standard': 'Kubernetes Security Checklist', 'controls': [' [...]
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
    check: NP-002-2
  name: np-002-2-only-egress-is-blocked
  namespace: np-002-2-only-egress-is-blocked
spec:
  podSelector: {}
  policyTypes:
    - Egress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    ccss_score: "7.5"
    ccss_severity: High
    check_path: NetworkPolicy.spec.policyTypes[]|.spec.policyTypes[]
    expected: alert
    standards: "[{'standard': 'CIS Kubernetes Benchmark', 'version': '1.12', 'controls': ['5.3.1']}, {'standard': 'NSA-CISA Kubernetes Hardening Guide', 'controls': ['Network policies']}, {'standard': 'BSI APP.4.4 Kubernetes', 'controls': ['APP.4.4.A7']}, {'standard': 'PCI Guidance for Containers and Container Orchestration Tools', 'controls': ['4.1.a']}, {'standard': 'Microsoft Threat Matrix for Kubernetes', 'controls': ['MS-M9014']}, {'standard': 'Kubernetes Security Checklist', 'controls': [' [...]
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
    check: NP-002-2
  name: np-002-2-only-egress-is-blocked
  namespace: np-002-2-only-egress-is-blocked
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: kalm-benchmark
      check: NP-002-2
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/app: runtime/default
        container.seccomp.security.alpha.kubernetes.io/pod: runtime/default
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
      labels:
        app.kubernetes.io/part-of: kalm-benchmark
        check: NP-002-2
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
              weight: 1
      automountServiceAccountToken: false
      containers:
        - env: []
          image: nginx@sha256:aed492c4dc93d2d1f6fe9a49f00bc7e1863d950334a93facd8ca1317292bf6aa
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
          name: app
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
          resources:
            limits:
              cpu: 1m
              ephemeral-storage: 1Mi
              memory: 1Mi
            requests:
              cpu: 1m
              ephemeral-storage: 1Mi
              memory: 1Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 31337
            runAsNonRoot: true
            runAsUser: 31337
            seLinuxOptions:
              level: s0:c123,c456
            seccompProfile:
              type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      nodeSelector:
        kubernetes.io/arch: amd64
      priorityClassName: default-priority
      securityContext:
        runAsGroup: 31337
        runAsNonRoot: true
        runAsUser: 31337
        seLinuxOptions:
          level: s0:c123,c456
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: np-002-2-only-egress-is-blocked-filler-dedicated-sa
